--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
-    "next": "13.2.4",
+    "next": "13.2.5-canary.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-katex": "^6.0.2",
